packages/debmagic/src/lint/snapshots/DM0001_debmagic_dummy_trigger.snap
---
source: packages/debmagic/src/lint/tester.rs
---
debian/debmagic-dummy-lint: DM0001 [debmagic-dummy-trigger] dummy Rule triggered
