packages/debmagic/src/lint/snapshots/LN0001_required_field_source_package.snap
---
source: packages/debmagic/src/lint/tester.rs
---
E: example (source): required-field (LN0001) example.dsc Standards-Version
E: example (source): required-field (LN0001) (in section for source) Standards-Version [debian/control]
