packages/debmagic/src/lint/snapshots/LN0004_source_contains_prebuilt_windows_binary_source_package.snap
---
source: packages/debmagic/src/lint/tester.rs
---
W: example (source): source-contains-prebuilt-windows-binary (LN0004) bin/app.exe [bin/app.exe]
W: example (source): source-contains-prebuilt-windows-binary (LN0004) lib/foo.dll [lib/foo.dll]
